--- a/PhotoApp/PhotoApp.Android/Properties/AndroidManifest.xml
+++ b/PhotoApp/PhotoApp.Android/Properties/AndroidManifest.xml
@@ -11,5 +11,9 @@
 		</provider>
 	</application>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <!-- <provider android:name="android.support.v4.content.FileProvider" -->
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.CAMERA" />
+
+	<!-- <provider android:name="android.support.v4.content.FileProvider" -->
 </manifest>
